[package]
name = "atsamd21-monotonic"
version = "0.1.0"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2018"

[lib]
test = false
bench = false

[dependencies]
cortex-m-rtic = "0.5.3"

[dependencies.atomic]
version = "0.5.0"
default-features = false

[dependencies.atsamd-hal]
version = "0.9.0"
default-features = false
features = ["samd21g18a"]

[dev-dependencies]
cortex-m = "0.6.3"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.12"
feather_m0 = { version = "0.7", features = ["usb"]}
usbd-serial = "0.1"
usb-device = "0.2"

[[example]]
name = "blink_1s"
